--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <br>
         <form>
             <div class="form-group">
-                <label for="menu">Select a Dish:</label>
+                <center><label for="menu">Select a Dish:</label></center>
                 <select id="menu" class="form-control">
                     <option value="No Data">--- Choose an Option ---</option>
                 </select>
@@ -23,6 +23,7 @@
         </form>
         <br>
         <br>
+        <h2>HERE IS THE DETAILS OF DISH</h2>
         <table class="table">
             <tbody>
                 <tr>
